--- a/Python_for_Research_edx/HW3_1.ipynb
+++ b/Python_for_Research_edx/HW3_1.ipynb
@@ -277,7 +277,9 @@
       "source": [
         "# write your code here!\n",
         "print(encoded_message)\n",
-        "em = encoding(message, 3)\n",
+        "em = encoding(message, -3)\n",
+        "\n",
+        "# Proove\n",
         "for i in range(27):\n",
         "  print(-i,\":\",encoding(encoded_message, -i))"
       ],
