--- a/Python_for_Research_edx/HW3_1.ipynb
+++ b/Python_for_Research_edx/HW3_1.ipynb
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "vB4L_9Syps4G",
         "colab_type": "code",
-        "outputId": "5b9b4cc7-c6b0-4687-82c4-cd7f9e226b7f",
+        "outputId": "41ccc1bb-6f2a-44d9-b562-28c60da290e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
@@ -87,7 +87,7 @@
         "\n",
         "print(alphabet)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "NFdHGxnVps4M",
         "colab_type": "code",
-        "outputId": "399779f6-97af-4d90-acc2-f6a6458dbc5c",
+        "outputId": "8caf5287-be81-4fb3-8fe9-d91a1030d94f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
@@ -134,7 +134,7 @@
         "\n",
         "print(positions)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "4ERt2bvsps4P",
         "colab_type": "code",
-        "outputId": "586508d2-fa2c-4fbc-a2d2-7bf2458f9dd2",
+        "outputId": "b038639e-b0a2-4852-fc81-375e9fe946a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
@@ -185,7 +185,7 @@
         "\n",
         "print(encoded_message)"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,7 +219,7 @@
       "metadata": {
         "id": "rhZozeLyps4S",
         "colab_type": "code",
-        "outputId": "744181d1-7573-4719-ba40-dabba9249acf",
+        "outputId": "a30fb7f8-3650-46f4-f6e9-c44c4a74ec36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
@@ -235,7 +235,7 @@
         "encoded_message = encoding(message, 3)\n",
         "print(encoding(message, 3))"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,27 +268,29 @@
       "metadata": {
         "id": "ss2BrRlpps4V",
         "colab_type": "code",
-        "outputId": "55c5abdc-48e3-46de-f3ff-c3fa05a97dcc",
+        "outputId": "818d032f-0860-4275-9dff-642113e2b03b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 502
         }
       },
       "source": [
         "# write your code here!\n",
         "print(encoded_message)\n",
-        "em = encoding(message, -3)\n",
+        "em = encoding(encoded_message, -3)\n",
+        "print(\"Solution: \",em)\n",
         "\n",
         "# Proove\n",
         "for i in range(27):\n",
         "  print(-i,\":\",encoding(encoded_message, -i))"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "klcpacqdphclvcfdhvdu\n",
+            "Solution:  hi my name is caesar\n",
             "0 : klcpacqdphclvcfdhvdu\n",
             "-1 : jkbo bpcogbkubecguct\n",
             "-2 : ijanzaobnfajtadbftbs\n",
